--- a/main.tex
+++ b/main.tex
@@ -38,9 +38,9 @@
 \checkandfixthelayout%
 
 % Meta-data
-\title{Assignment 1: COMP90043}
-\author{Marc Tom Thorgersen, SID 906200, mthorgersen@student.unimelb.edu.au}
-\date{August 17, 2017}
+\title{Title}
+\author{Author}
+\date{Date}
 
 % Main modules
 \usepackage{url}      % URL
@@ -50,6 +50,17 @@
 \usepackage{verbatim} % Code
 \usepackage{moreverb} % Encoding
 \usepackage{listings} % Code
+\lstset
+{
+    language=Python,
+    numbers=left,
+    stepnumber=1,
+    tabsize=4,
+    commentstyle=\color{olive},
+    keywordstyle=\color{violet},
+    stringstyle=\color{red},
+    %keywordstyle=\color{weborange},
+}
 \usepackage{xcolor}    % Highlight
 \usepackage{multicol} % Multi Column
 \usepackage[inline,shortlabels]{enumitem}
